--- a/AdventureWorksMVC/AdventureWorksMVC/Views/Employees/Index.cshtml
+++ b/AdventureWorksMVC/AdventureWorksMVC/Views/Employees/Index.cshtml
@@ -8,24 +8,24 @@
 <table id="table_id" class="display">
     <thead>
         <tr>
-            <th>Column 1</th>
-            <th>Column 2</th>
+            <th>First Name</th>
+            <th>Last Name</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
+            <td>Mike</td>
+            <td>Everts</td>
         </tr>
         <tr>
-            <td>Row 2 Data 1</td>
-            <td>Row 2 Data 2</td>
+            <td>Kristin</td>
+            <td>Everts</td>
         </tr>
     </tbody>
 </table>
 
 
-<script type="text/javascript">
+<script >
 $(document).ready( function () {
     $('#table_id').DataTable();
 } );
