--- a/AdventureWorksMVC/AdventureWorksMVC/Views/Employees/Create.cshtml
+++ b/AdventureWorksMVC/AdventureWorksMVC/Views/Employees/Create.cshtml
@@ -17,8 +17,8 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.BusinessEntityID, "BusinessEntityID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("BusinessEntityID", null, htmlAttributes: new { @class = "form-control" })
+            <div  class="col-md-10">
+                @Html.EditorFor(model => model.BusinessEntityID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BusinessEntityID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -115,7 +115,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div  hidden class="form-group">
             @Html.LabelFor(model => model.rowguid, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.rowguid, new { htmlAttributes = new { @class = "form-control" } })
@@ -123,13 +123,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div hidden class="form-group">
             @Html.LabelFor(model => model.ModifiedDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ModifiedDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ModifiedDate, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
