--- a/AdventureWorksMVC/AdventureWorksMVC/Views/Employees/Index.cshtml
+++ b/AdventureWorksMVC/AdventureWorksMVC/Views/Employees/Index.cshtml
@@ -1,33 +1,54 @@
 ﻿@model IEnumerable<AdventureWorksMVC.Models.Employee>
-
 @{
     ViewBag.Title = "Index";
-
 }
 
-<table id="table_id" class="display">
-    <thead>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Mike</td>
-            <td>Everts</td>
-        </tr>
-        <tr>
-            <td>Kristin</td>
-            <td>Everts</td>
-        </tr>
-    </tbody>
-</table>
+<h2>Index</h2>
+<div>
+    @Html.ActionLink("Add User","Create", "Employees", new { @class = "btn btn-success" })
+</div>
+<br />
+
+<div>
+    <table id="table_id" class="display">
+        <thead>
+            <tr>
+                <th hidden>ID</th>
+                <th>User ID</th>
+                <th>Job Title</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
 
 
-<script >
-$(document).ready( function () {
-    $('#table_id').DataTable();
-} );
+
+        <tbody>
+            @foreach (var e in Model)
+            {
+                <tr>
+                    <td hidden>@e.BusinessEntityID</td>
+                    <td>@e.LoginID</td>
+                    <td>@e.JobTitle</td>
+                    <td>@e.Person.FirstName</td>
+                    <td>@e.Person.LastName</td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
+</div>
+<script>
+    $(document).ready(function () {
+        var table = $('#table_id').DataTable({
+            "order": [0, "asc"],
+            scrollY: 400,
+            aLengthMenu: [
+                [10, 50, 100, -1],
+                [10, 50, 100, "All"]
+            ]
+        });
+    });
+
+
 </script>
-
